--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
-*.txt filter=lfs diff=lfs merge=lfs -text
+recipes.txt filter=lfs diff=lfs merge=lfs -text
